# adpages-python-tools

./: PRIVACY.md  PUBLISH_BLOCKERS.md  README.md  package.json  pyproject.toml
.github/workflows/: publish-pypi.yml
scripts/: check.py
src/adpages_tools/: __init__.py  ads_copy.py  cli.py  schema.py  utm.py
tests/: test_core.py
